[metadata]
name = envault
version = 0.1.0
description = Securely manage and sync environment variables across dev environments
author = envault contributors
license = MIT

[options]
packages = find:
python_requires = >=3.9
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    envault = envault.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = --tb=short

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist
